[package]
name = "nblast"
version = "0.1.0"
authors = ["Chris Barnes <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.19.0"
rstar = "0.7.1"

[dev-dependencies]

bencher = "0.1.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[[bench]]

name = "bench"
harness = false
