[package]
name = "nblast-js"
version = "0.3.0"
edition = "2021"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
description = "Javascript bindings for nblast-rs library"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
nblast = { path = "../nblast-rs", version = "^0.6.0", default-features = false, features = ["bosque"]}

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
lto = true

[package.metadata.release]
publish = false
tag-prefix = "js-"
