[package]
name = "nblast"
description = "Implementation of NBLAST neurite similarity algorithm"
version = "0.3.0"
repository = "https://github.com/clbarnes/nblast-rs/tree/master/nblast-rs"
homepage = "https://github.com/clbarnes/nblast-rs"
documentation = "https://docs.rs/nblast"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
keywords = ["neuroscience", "morphology", "nblast"]
categories = ["algorithms", "science"]

[badges]

travis-ci = { repository = "https://github.com/clbarnes/nblast-rs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.19.0"
rstar = "0.8.0"
rayon = { version = "1.3.0", optional = true }

[dev-dependencies]

bencher = "0.1.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[features]

parallel = ["rayon"]

default = ["parallel"]

[[bench]]

name = "bench"
harness = false
