[package]
name = "nblast"
description = "Implementation of NBLAST neurite similarity algorithm"
version = "0.4.0"
repository = "https://github.com/clbarnes/nblast-rs/tree/master/nblast-rs"
homepage = "https://github.com/clbarnes/nblast-rs"
documentation = "https://docs.rs/nblast"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
keywords = ["neuroscience", "morphology", "nblast"]
categories = ["algorithms", "science"]

[badges]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.31"
rstar = "0.9"
# rand = { version = "0.8", default-features = false }
# rand_pcg = "0.3"
fastrand = "1.9"
rayon = { version = "1.5", optional = true }
thiserror = "1.0"
nabo = { version = "0.2.1", optional = true }
# fnntw = "0.2"

[dev-dependencies]

bencher = "0.1.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[features]

parallel = ["rayon"]

# default = ["parallel"]

[[bench]]

name = "bench"
harness = false
required-features = ["parallel"]

[package.metadata.release]
disable-publish = true
no-dev-version = true
tag-prefix = "rs-"
