[package]
name = "nblast"
description = "Implementation of NBLAST neurite similarity algorithm"
version = "0.7.1"
repository = "https://github.com/clbarnes/nblast-rs/tree/master/nblast-rs"
homepage = "https://github.com/clbarnes/nblast-rs"
documentation = "https://docs.rs/nblast"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
keywords = ["neuroscience", "morphology", "nblast"]
categories = ["algorithms", "science"]
rust-version = "1.75"

[badges]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.31"
rstar = {version = "0.9", optional = true}
fastrand = "1.9"
rayon = { version = "1.5", optional = true }
thiserror = "1.0"
nabo = { version = "0.2.1", optional = true }
kiddo = { version = "4.1.1", optional = true }
cfg-if = "1.0.0"
bosque = { version = "0.2.0", optional = true }
serde = { version = "1", optional = true, features = ["derive"]}

[dev-dependencies]

bencher = "0.1.5"
csv = "1.1"
fastrand = "1.9"
serde = { version = "1", features = ["derive"] }

[features]
default = ["kiddo"]

parallel = ["rayon"]
serde = ["dep:serde", "kiddo?/serialize", "rstar?/serde"]

[[bench]]

name = "bench"
harness = false
required-features = ["parallel", "bosque", "kiddo", "nabo", "rstar"]

[package.metadata.release]
publish = false
tag-prefix = "rs-"
