[package]
name = "spatial_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bosque = "0.1.0"
criterion = "0.5.1"
csv = "1.3.0"
fnntw = "0.4.1"
nabo = "0.3.0"
rstar = "0.11.0"

[[bench]]
name = "spatial"
harness = false
